src/FinancialForce Accounting/objects/codaSelection__c.object
<CustomObject>
    <customHelpPage>codahelpselectiondef</customHelpPage>
    <description>Stores the queries for selecting and filtering data (used in Mass Email, XL and Print Formatter)</description>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SelectionDescription__c</fullName>
        <label>Selection Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SelectionHeaderObjectLabel__c</fullName>
        <label>Selection Header Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectionHeaderObject__c</fullName>
        <label>Selection Header Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectionLineItemObjectLabel__c</fullName>
        <label>Selection Line Item Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectionLineItemObject__c</fullName>
        <label>Selection Line Item Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Selection Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SelectionDescription__c</columns>
        <columns>SelectionHeaderObject__c</columns>
        <columns>SelectionLineItemObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>